Replacing master content with testing branch content